third_party/clingo/libclingo/clingo.h


enum clingo_error_e {
    clingo_error_success = 0,   
    clingo_error_runtime = 1,   
    clingo_error_logic = 2,     
    clingo_error_bad_alloc = 3, 
    clingo_error_unknown = 4    
};
typedef int clingo_warning_t;
typedef void (*clingo_logger_t)(clingo_warning_t code, char const *message, void *data);
typedef uint64_t clingo_signature_t;
enum clingo_symbol_type_e {
    clingo_symbol_type_infimum = 0,  
    clingo_symbol_type_number = 1,   
    clingo_symbol_type_string = 4,   
    clingo_symbol_type_function = 5, 
    clingo_symbol_type_supremum = 7  
};
typedef int clingo_symbol_type_t;
typedef uint64_t clingo_symbol_t;
CLINGO_VISIBILITY_DEFAULT bool clingo_symbol_create_id(char const *name, bool positive, clingo_symbol_t *symbol);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbol_create_function(char const *name, clingo_symbol_t const *arguments,
                                                             size_t arguments_size, bool positive,
                                                             clingo_symbol_t *symbol);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbol_number(clingo_symbol_t symbol, int *number);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbol_name(clingo_symbol_t symbol, char const **name);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbol_string(clingo_symbol_t symbol, char const **string);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbol_is_positive(clingo_symbol_t symbol, bool *positive);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbol_is_negative(clingo_symbol_t symbol, bool *negative);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbol_arguments(clingo_symbol_t symbol, clingo_symbol_t const **arguments,
                                                       size_t *arguments_size);
CLINGO_VISIBILITY_DEFAULT clingo_symbol_type_t clingo_symbol_type(clingo_symbol_t symbol);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbol_to_string_size(clingo_symbol_t symbol, size_t *size);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbol_to_string(clingo_symbol_t symbol, char *string, size_t size);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbol_is_equal_to(clingo_symbol_t a, clingo_symbol_t b);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbol_is_less_than(clingo_symbol_t a, clingo_symbol_t b);
CLINGO_VISIBILITY_DEFAULT size_t clingo_symbol_hash(clingo_symbol_t symbol);
CLINGO_VISIBILITY_DEFAULT bool clingo_add_string(char const *string, char const **result);
CLINGO_VISIBILITY_DEFAULT bool clingo_parse_term(char const *string, clingo_logger_t logger, void *logger_data,
                                                 unsigned message_limit, clingo_symbol_t *symbol);
typedef struct clingo_symbolic_atoms clingo_symbolic_atoms_t;
typedef uint64_t clingo_symbolic_atom_iterator_t;
CLINGO_VISIBILITY_DEFAULT bool clingo_symbolic_atoms_size(clingo_symbolic_atoms_t const *atoms, size_t *size);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbolic_atoms_begin(clingo_symbolic_atoms_t const *atoms,
                                                           clingo_signature_t const *signature,
                                                           clingo_symbolic_atom_iterator_t *iterator);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbolic_atoms_end(clingo_symbolic_atoms_t const *atoms,
                                                         clingo_symbolic_atom_iterator_t *iterator);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbolic_atoms_find(clingo_symbolic_atoms_t const *atoms, clingo_symbol_t symbol,
                                                          clingo_symbolic_atom_iterator_t *iterator);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbolic_atoms_iterator_is_equal_to(clingo_symbolic_atoms_t const *atoms,
                                                                          clingo_symbolic_atom_iterator_t a,
                                                                          clingo_symbolic_atom_iterator_t b,
                                                                          bool *equal);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbolic_atoms_symbol(clingo_symbolic_atoms_t const *atoms,
                                                            clingo_symbolic_atom_iterator_t iterator,
                                                            clingo_symbol_t *symbol);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbolic_atoms_is_fact(clingo_symbolic_atoms_t const *atoms,
                                                             clingo_symbolic_atom_iterator_t iterator, bool *fact);
typedef struct clingo_part {
    char const *name;              
    clingo_symbol_t const *params; 
    size_t size;                   
} clingo_part_t;
typedef bool (*clingo_ground_callback_t)(clingo_location_t const *location, char const *name,
                                         clingo_symbol_t const *arguments, size_t arguments_size, void *data,
                                         clingo_symbol_callback_t symbol_callback, void *symbol_callback_data);
typedef struct clingo_control clingo_control_t;
CLINGO_VISIBILITY_DEFAULT bool clingo_control_ground(clingo_control_t *control, clingo_part_t const *parts,
                                                     size_t parts_size, clingo_ground_callback_t ground_callback,
                                                     void *ground_callback_data);
CLINGO_VISIBILITY_DEFAULT bool clingo_control_cleanup(clingo_control_t *control);
CLINGO_VISIBILITY_DEFAULT bool clingo_control_symbolic_atoms(clingo_control_t const *control,
                                                             clingo_symbolic_atoms_t const **atoms);
typedef struct clingo_options clingo_options_t;
CLINGO_VISIBILITY_DEFAULT bool clingo_options_add(clingo_options_t *options, char const *group, char const *option,
                                                  char const *description, bool (*parse)(char const *value, void *data),
                                                  void *data, bool multi, char const *argument);